apps/cluster-core/cert-manager/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-policy
  namespace: cert-manager
spec:
  endpointSelector: {}
  # ----=== Ingress ===----
  ingress:
    # === Allow webhook access from the API server ===
    - fromEntities:
        - "kube-apiserver"
      toPorts:
        - ports:
            - port: "10250"
              protocol: "TCP"
  # ----=== Egress ===----
  egress:
    # === Allow access to the Kubernetes API server ===
    - toEntities:
        - "kube-apiserver"
    # === Allow access to the world for ACME challenges ===
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "443"
              protocol: "UDP"
            - port: "80"
              protocol: "TCP"
            - port: "53"
              protocol: "TCP"
